--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ rvm:
 env: DB=postgresql
 before_script:
   - psql -c 'create database smile_test;' -U postgres
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rake
